po/nl: translate missing string

--- a/po/nl.po
+++ b/po/nl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: piper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-23 20:36+0200\n"
+"POT-Creation-Date: 2017-08-23 20:37+0200\n"
 "PO-Revision-Date: 2017-08-17 17:49+0200\n"
 "Last-Translator: Jente Hidskes <hjdskes@gmail.com>\n"
 "Language-Team: Dutch <>\n"
@@ -264,6 +264,9 @@ msgid ""
 "handed mode, the physical left mouse button generates a right mouse click "
 "and vice versa."
 msgstr ""
+"Dit stelt u in staat om de volgorde van de primaire muisknoppen om "
+"tewisselen. In linkshandige modus genereert de fysieke linkermuisknop "
+"eenrechter muisklik en vice versa."
 
 #: data/ui/ButtonDialog.ui:290
 msgid "Left Handed"
