--- a/po/hr.po
+++ b/po/hr.po
@@ -8,12 +8,12 @@ msgstr ""
 "Project-Id-Version: piper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-25 22:16+0200\n"
-"PO-Revision-Date: 2017-08-25 23:21+0200\n"
+"PO-Revision-Date: 2018-07-26 12:41+0200\n"
 "Language-Team: Croatian <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 1.8.7.1\n"
 "Last-Translator: gogo <trebelnik2@gmail.com>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
@@ -410,7 +410,7 @@ msgstr "Aktivno"
 
 #: data/ui/ResolutionRow.ui:105
 msgid "Set this resolution's DPI"
-msgstr "Postavi ovaj DPI razlučivosti"
+msgstr "Postavi ovu DPI razlučivosti"
 
 #. Translators: the rate at which the device reports movement.
 #: data/ui/ResolutionsPage.ui:43
