update for Po-Revision-Date and Last-Translator strings

--- a/po/fr.po
+++ b/po/fr.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: piper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-12 22:45+0200\n"
-"PO-Revision-Date: 2019-07-19 20:00+1000\n"
-"Last-Translator: Macrez Mallory <macrez.mallory@outlook.fr>\n"
+"PO-Revision-Date: 2020-01-20 20:30+1000\n"
+"Last-Translator: Launay Théo <launatheo@gmail.com>\n"
 "Language-Team: French <>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
